--- a/index.html
+++ b/index.html
@@ -10,9 +10,19 @@
 </head>
 <body>
     
-    <div class="image-container">
-        <h1>SLIDER ANIMATION PROJECT</h1>
-        <img src="images/pexels-andy-vu-3484061.jpg" alt="">
+    <div class="container">
+        <div class="title-container">
+            <h1 class="title">SLIDER ANIMATION PROJECT</h1>
+        </div>    
+
+        <div class="image-container">
+            <img src="images/pexels-pixabay-273935.jpg" alt="IMAGE">
+        </div>
+
+        <div class="button-container">
+            <button class="prev-btn">PREV</button>
+            <button class="next-btn">NEXT</button>
+        </div>
     </div>
         
 </body>
