--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         </div>    
 
         <div class="image-container">
-            <img src="images/pexels-pixabay-273935.jpg" alt="IMAGE">
+            <img src="images/pexels-andy-vu-3484061.jpg" alt="IMAGE">
         </div>
 
         <div class="button-container">
-            <button class="prev-btn">PREV</button>
+            <!-- <button class="prev-btn">PREV</button> -->
             <button class="next-btn">NEXT</button>
         </div>
     </div>
