update html content!

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>    
 
         <div class="image-container">
-            <img src="images/pexels-andy-vu-3484061.jpg" alt="IMAGE">
+            <img src="" class="">
         </div>
 
         <div class="button-container">
