--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <div class="container">
         <div class="title-container">
-            <h1 class="title">SLIDER ANIMATION PROJECT</h1>
+            <h1 class="title">IMAGE ANIMATION PROJECT</h1>
         </div>    
 
         <div class="image-container">
